empty get alls return 200/204 and dimensions API added
